--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </p>
 
     <h3>your points: <span id="player-points"></span></h3>
-    <script src="/js/app.js"></script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
